flowc/tests/fixtures/resolve_e125_variant_flow.flow
flow Plan(int) -> int { it }

type Outcome =
  | Plan { id: int }

flow decide(string) -> Outcome {
  Plan { id: 1 }
}
